--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -1,6 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Ubuntu:wght@400;500;700&display=swap");
+
+/* Sean custom start */
+.react-calendar__tile--active {
+  border: 2px solid #7751e8 !important;
+}
+/* Sean custom end */
+
 html,
 body {
+  
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
